# NNPWS

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindJupyter.cmake
doc/: Doxyfile-NNPWS.in
resources/models/: DNN_Backward_PH_noRegion.pt  DNN_TP_v6.pt  DNN_TP_v8.pt
src/: FastInference.cxx  FastInference.hxx  ModelLoader.cxx  ModelLoader.hxx  NNPWS.cxx  NNPWS.hxx  Regions.hxx
swig/: CMakeLists.txt  NNPWS.i
tests/: CMakeLists.txt  NNPWS_tests.c  NNPWS_tests.cxx  test.c
tests/python/: CMakeLists.txt
